--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ body {
   font-weight: var(--fw-700);
   color: var(--color-brown);
 }
-.table-omelette span {
+.table-omelette td {
   color: var(--color-brown);
   font-weight: var(--fw-700);
 }
@@ -237,6 +237,8 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: var(--space-md);
+  align-items: start;
+  text-align: left;
   padding: var(--space-sm) var(--space-sm) var(--space-sm) var(--space-xl);
 }
 .table-omelette__row:not(:last-child) {
@@ -244,7 +246,8 @@ body {
 }
 
 .separator-line {
-  border-block-end: var(--w-separator-line) solid var(--color-stone-150);
+  border: none;
+  border-block-start: var(--w-separator-line) solid var(--color-stone-150);
 }
 
 .__counter {
